design done - edit readme

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
         <div class="tic-tac-toe">
           <img src="./assets/images/tic-tac-toe.png" alt="tic-tac-toe-icon" />
         </div>
-        <h1>tic-tac-toe</h1>
+        <h1 id="cool-colors"></h1>
       </header>
       <div class="game"></div>
 
       <script src="./src/index.js"></script>
+      <script src="./src/letters-effect.js"></script>
     </h1>
   </body>
 </html>
