design done and gameplay

--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
         <h1 id="cool-colors"></h1>
       </header>
       <div class="game"></div>
-
+      <div class="button-container">
+        <button
+          class="restart-btn"
+          onclick="tic_tac_toe.restart()"
+          title="Restart the Game!"
+        >
+          Restart
+        </button>
+      </div>
       <script src="./src/index.js"></script>
       <script src="./src/letters-effect.js"></script>
     </h1>
